[metadata]
name = python_leetcode_runner
version = 1.0.9
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
description = A CLI app to run any given Leetcode python solution.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/python_leetcode_runner
license = MIT
license_file = LICENSE
license_files =
    licenses/LICENSE_pre-commit_pre-commit

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules =
    leetcode
    color
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pyleet=leetcode:pyleet
